Prevent jump.

--- a/themes/jain/assets/scss/meta.scss
+++ b/themes/jain/assets/scss/meta.scss
@@ -39,9 +39,10 @@
             border-radius: 5px;
             background-color: var(--theme-color);
             transition: border-radius 0.5s ease-in-out;
+            border: 2px solid transparent;
             &:hover {
                 border-radius: 50%;
-                border: 2px solid $divider;
+                border-color: $divider;
             }
         }
         h2 {
